# Cours-Centrale-EI2

./: .gitignore  Pitch.odt
AGATH/: Exercices.txt  board.py
ALGOA/: Examen Romain LUCAS.xml  Romain LUCAS.odt
ALGOA/TP Compression/: Burrows-Wheeler.py  HuffmanTree.py  move-to-front.py  priority.py  reader.py  zRLE.py
GPGPU/: addvec.cu  hello  hello.cu  matrix  matrix.cu
INDUR/: Examen.odt
MATH/: division euclidienne.odt
PAPY/: C1.html  DS PAPY.odt  Notebook_examen_PAPY_2022.ipynb  PAPY_C2.ipynb
PAPY/.ipynb_checkpoints/: Notebook_examen_PAPY_2022-checkpoint.ipynb  PAPY_C2-checkpoint.ipynb  PAPY_C3-checkpoint.ipynb
PAPY/C1_fichiers/: PAPY_C1.html  requirejs.php  (+1 more)
PAPY/TP_final/mandelbrot/: LICENSE  __main__.py  setup.cfg
PAPY/TP_final/mandelbrot/doc/source/: conf.py
PAPY/TP_final/mandelbrot/mandelbrot/: mandelbrot.py  plot_julia.py  plot_mandelbrot.py
PFONC/: DS  solutions_exercices.hs
POK/: Cours_socket.ipynb  cards.py  combinaison.py  combinaison2.py  log  log2  log3.txt  test.py  test2.py  test3.py
QCM/: Teacher.py  test_Employee.py  test_sample.py
STASC/: 2-Plotting_student.ipynb  3-Scientific_computing_student.ipynb  4-Statistics_student.ipynb  CART_BaggedTree_RF_apprentis 2.ipynb  CART_BaggedTree_RF_apprentis.ipynb  CART_RF_Apprentis.html  CART_RF_Apprentis.ipynb  CNN-animals-etudiants.ipynb  Intro-Keras-Sequential-apprentis.ipynb  TP-BasicClassif-NBC-ppv-Appprentis.ipynb  TP-HumanActivity-Classification-Apprentis (2).ipynb  TP-HumanActivity-Classification-Apprentis Romain LUCAS.html  TP-HumanActivity-Classification-Apprentis.ipynb
(+189 files in other folders)
