[metadata]
name = mandelbrot-plots
author = Romain LUCAS & Alexandre THOMASSIN
author_email = romain.lucas@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = Représentation graphique des ensembles de Mandelbrot et de Julia
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    pytest
    numpy
    Pillow
    numba
    argparse

[options.entry_points]
console_scripts =
    plotMandelbrot = __main__:mandelbrot
    plotJulia = __main__:julia

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
